--- a/cultivarFilesPreparation.html
+++ b/cultivarFilesPreparation.html
@@ -1524,8 +1524,12 @@ editor_options:
   markdown: 
     wrap: 72
 -->
-<p><span style="color: red;"> <strong>Points à poursuivre: </strong></p>
+<p><span style="color: red;"> <strong>Brouillon avancé. Reste à faire:
+</strong></p>
 <ul>
+<li>renforcer la revue de littérature et ajouter des références qui
+permettrait de justifier des choix de seuil</li>
+<li>ajouter références manquantes (en gras)</li>
 <li>réactualiser le script après avoir finaliser le script sur le sol
 (pour le nom des entités régionales essentiellement)</li>
 <li>réaliser l’optimisation des paramètres variétaux avec Sirius
