--- a/cultivarFilesPreparation.html
+++ b/cultivarFilesPreparation.html
@@ -1532,6 +1532,8 @@ permettrait de justifier des choix de seuil</li>
 <li>ajouter références manquantes (en gras)</li>
 <li>réactualiser le script après avoir finaliser le script sur le sol
 (pour le nom des entités régionales essentiellement)</li>
+<li>réajuster la fenêtre de floraison potentielle ? (jusqu’au 15 juin -
+cas spécifique pour les cellules en altitude type chaine des puys)</li>
 <li>réaliser l’optimisation des paramètres variétaux avec Sirius
 <ul>
 <li>préparation des fichiers “observations”</li>
